--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <section>
-            <p id="choise">'ここに日時を表示する'</p>
+            <p id="choise">'ここに結果を表示する'</p>
         </section>
         <script type="text/javascript" src="js/default.js"></script>
     </body>
