--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <section>
             <p id="choise">'ここに結果を表示する'</p>
         </section>
-        <script type="text/javascript" src="js/default.js"></script>
+        <script type="text/javascript" src="default.js"></script>
     </body>
 </html>
